Update Tools.java